# depop_takehome_task

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
data/: test_set.tsv  train_set.tsv
notebooks/: Classifying Keyword Spamming-checkpoint.ipynb  original.html  sheng_solution.html  sheng_solution.ipynb
