[project]
name = "python-uv-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.4.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "polars>=1.32.0",
    "torch>=2.7.1",
]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
]
