[project]
name = "depop-takehome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.5",
    "matplotlib>=3.11.0",
    "nltk>=3.9.4",
    "numpy==2.2.6",
    "pandas==2.2.3",
    "pexpect>=4.9.0",
    "polars>=1.32.0",
    "scikit-learn==1.6.1",
    "seaborn>=0.13.2",
    "spacy==3.8.6",
    "torch>=2.7.1",
    "truecase==0.0.14",
    "unidecode==1.4.0",
    "xgboost==3.0.1",
]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
]
